# deskclock-tauri

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES_PLANEJADAS.md  FEAT_AUTO_UPDATER.md  PENDENCIAS.md  POLIMENTOS.md  POLIMENTOS2.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/commands/: commit-message.md
.github/workflows/: ci.yml  release.yml
docs/: APRESENTACAO.md  F1_LOCAL_REST_API.md  FEATURES_PLANEJADAS.md  LOGO_CONCEPTS.md  LOGO_VARIATIONS.md  PLAN_WINDOW_POSITIONING.md
scripts/: sync-tauri-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 002_tasks.sql  003_planned_tasks.sql  005_config.sql  006_task_sheets_sent.sql  007_task_integration_log.sql
src-tauri/src/: lib.rs  migrations.rs  tray.rs
src-tauri/src/api/: db.rs  handlers.rs  mod.rs  models.rs  openapi.rs  routes.rs  server.rs  state.rs
src-tauri/src/commands/: local_api.rs  mod.rs  shortcuts.rs  tray.rs  updater.rs
src/domain/entities/: ExportProfile.ts  PlannedTask.ts  Task.ts
src/domain/integrations/: ICalendarImporter.ts  ITaskSender.ts
src/domain/repositories/: ICategoryRepository.ts  IConfigRepository.ts  IPlannedTaskRepository.ts  IProjectRepository.ts  ITaskIntegrationLogRepository.ts  ITaskRepository.ts
src/infra/database/: CategoryRepository.ts  ConfigRepository.ts  ExportProfileRepository.ts  PlannedTaskRepository.ts  ProjectRepository.ts  TaskIntegrationLogRepository.ts  TaskRepository.ts
src/infra/integrations/: GoogleCalendarImporter.ts  GoogleSheetsTaskSender.ts
src/presentation/components/: Autocomplete.tsx  BulkImportTextarea.tsx  CategoriesPanel.tsx  CategoryCard.tsx  CommandPalette.tsx  DatePickerInput.tsx  Omnibox.tsx  PlannedTaskForm.tsx  PlannedTaskItem.tsx  PlannedTasksSection.tsx  ProjectCard.tsx  ProjectsPanel.tsx  RunningTaskEditForm.tsx  RunningTaskSection.tsx  SearchInput.tsx  Sidebar.tsx  TaskCard.tsx  TaskGroupCard.tsx  TitleBar.tsx  TodayEntriesSection.tsx  TodayPlanningView.tsx  ToggleBillable.tsx  TotalsSection.tsx  WeekPlanningView.tsx
src/presentation/contexts/: ConfigContext.tsx  RunningTaskContext.tsx
src/presentation/hooks/: useCategories.ts  useExportProfiles.ts  useHistory.ts  usePlannedTasks.ts  useProjects.ts  useTasks.ts  useUpdater.ts
src/presentation/modals/: BulkImportModal.tsx  EditPlannedTaskModal.tsx  EditTaskModal.tsx  ExportModal.tsx  ImportCalendarModal.tsx  RetroactiveTaskModal.tsx  SheetsSendModal.tsx
src/presentation/overlays/: CommandPaletteApp.tsx  CompactExecutionOverlayContent.tsx  CompactOverlayApp.tsx  CompactOverlayContent.tsx  ExecutionOverlay.tsx  (+12 more)
tests/: setup.ts
(+101 files in other folders)
