[package]
name = "deskclock"
version = "0.0.0"
description = "DeskClock — registro de horas trabalhadas"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "deskclock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
